Fix alignment

--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -5,3 +5,7 @@
 .yt-channel {
     margin-left: -25px;
 }
+
+.insta-channel {
+    margin-left: -30px;
+}
